# ECBS-6001-Advanced-Macroeconomics

./: .gitignore  ECBS-6001-Advanced-Macroeconomics.docx  ECBS-6001-Advanced-Macroeconomics.md  Manifest.toml  Pipfile  Project.toml  README.md  dynamic-programming-pset-7.tex  dynamic-programming-pset-solutions.tex  dynamic-programming-pset.tex  lecture6.tex  packages.md  pyproject.toml  render.py  setup.md  syllabus-template.docx  syllabus-template.md  syllabus.yaml
assignments/: Assignment-1.ipynb  Assignment-2.ipynb  Assignment1.ipynb  Assignment2.ipynb  Assignment2b.ipynb  Take-home.ipynb
class/: 2011-11-08 Advanced Macro.md  2022-11-07 Advanced Macroeconomics.md  2022-11-14 Advanced Macro.md  2022-11-16 Advanced Macro.md  2022-11-21 Advanced Macro.md  2022-11-28 Advanced Macro.md  2022-11-30 Advanced Macro.md  Manifest.toml  Project.toml  class01.jl  class02.jl  class03.jl  class05.jl  class07.jl  class09.jl  pluto_header.jl
lectures/: Makefile  continuous.txt  dp.txt  dynamic-programming.txt  handout.tex  klette-kortum.txt  koren-tenreyro.txt  lecture3.txt  lecture8.txt  markov.txt  new-products.txt  presentation.tex  quality.txt  scale.txt
notes/: 01-Difference-Equations.ipynb  01-Dynamic-Systems.ipynb  02-Markov-Chains.ipynb  02-Markov-Processes.ipynb  03-Dynamic-Programming.ipynb  04-Applications.ipynb  04-Dynamic-Programming.ipynb  Class 02.md  Class 03.md  Class01.ipynb  Class02.ipynb  Class03.ipynb  Class04.ipynb  Class05.ipynb  Class06.ipynb  Class07.ipynb  Class07.md  Class09.ipynb  Class10.ipynb  Class11-12.ipynb  Exercises.md  Manifest.toml  (+1 more)
